--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -53,6 +53,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_medium"
+        android:text="TextViewRichDrawable: VECTOR WITHOUT SIZE\ndrawableStartVector"
+        app:drawableStartVector="@drawable/ic_android_black_24dp" />
+
+    <com.tolstykh.textviewrichdrawable.TextViewRichDrawable
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_medium"
         android:text="TextViewRichDrawable: VECTOR WITH SIZE\ndrawableEndVector[24dp;24dp]"
         app:compoundDrawableHeight="24dp"
         app:compoundDrawableWidth="24dp"
